--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "lodash.groupby": "^4.6.0",
     "pg": "^8.11.2"
   },
   "license": "MIT",
