Added configurations for deployment

--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,10 @@
 {
   "name": "family-members-tree-crud",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "type": "module",
   "dependencies": {
